# starlab-mpc

./: .gitignore  CLAUDE.md  Cargo.toml  IMPLEMENTATION_PLAN.md  LICENSE-APACHE  LICENSE-MIT  README.md  flake.nix  package.json
apps/cli/: Cargo.toml
apps/cli-node/: Cargo.toml
apps/cli-node/src/: bridge.rs  lib.rs  main.rs  oneshot.rs  policy.rs  protocol.rs  reshare.rs  serve.rs  simulate.rs  trace.rs
apps/cli-node/tests/: conformance_matrix.rs  e2e_dkg.rs  event_contract.rs  l3_serve_process.rs  wire_trace.rs
apps/cli-node/tests/fixtures/: dkg_wire_protocol.golden.txt  signing_wire_protocol.golden.txt
apps/cli/src/: bridge.rs  lib.rs  main.rs  oneshot.rs  protocol.rs  reshare.rs  serve.rs  simulate.rs  trace.rs
apps/cli/tests/: conformance_matrix.rs  e2e_dkg.rs  event_contract.rs  l3_serve_process.rs  wire_trace.rs
apps/cli/tests/fixtures/: event_contract.golden.jsonl
apps/native-node/: Cargo.toml  README.md
apps/native-node/docs/: REFACTOR_PLAN.md
apps/native-node/src/: core_adapter.rs  main.rs  ui_callback.rs
apps/native-node/ui/: main_enhanced.slint
apps/native-node/ui/components/: wallet_selector.slint
apps/signal-server/cloudflare-worker/: Cargo.toml  README.md  wrangler.toml
apps/signal-server/cloudflare-worker/src/: lib.rs
apps/signal-server/server/: Cargo.toml  README.md
apps/signal-server/server/src/: cloudflare_storage.rs  lib.rs  main.rs  session_manager.rs
apps/tui/: Cargo.toml
apps/tui-node/: Cargo.toml
apps/tui-node/docs/: COMPLETE_OFFLINE_WORKFLOW.md  COMPLETE_TUI_DOCUMENTATION.md  DEPLOYMENT_GUIDE.md  E2E_TEST_DESIGN.md  HYBRID_MODE_TEST_DESIGN.md  KEYSTORE_E2E_TEST_PLAN.md  MPC_WALLET_TUI_ARCHITECTURE.md  OFFLINE_DKG_GUIDE.md  PERFORMANCE_FIXES.md  README.md  WEBRTC_MESH_IMPLEMENTATION.md  WEBRTC_MESH_TEST_DESIGN.md  index.md
apps/tui-node/docs/architecture/: ARCHITECTURE.md  ELM_ARCHITECTURE.md  README.md  SECURITY.md  keystore_design.md
apps/tui-node/docs/archive/dev-journal/: ERROR_HANDLING_GUIDE.md  EVENT_SYSTEM_COMPLETE.md  EVENT_SYSTEM_FIX.md  FIX_SUMMARY.md  FIX_THRESHOLD_SCREEN_STUCK.md  HYBRID_MODE_COMPLETE.md  KEYSTORE_E2E_COMPLETE.md  KEYSTORE_INITIALIZATION.md  LEGACY_REMOVED.md  PERFORMANCE_OPTIMIZATIONS.md  PHASE1_COMPLETE.md  PHASE1_PROGRESS.md  PHASE2_PLAN.md  README.md  REAL_DKG_IMPLEMENTATION.md  REAL_FROST_IMPLEMENTATION.md  UX_IMPROVEMENTS_PLAN.md  WARNINGS_FIXED.md  performance-analysis.md
apps/tui-node/docs/archive/legacy-ui/: README.md
apps/tui-node/docs/guides/: README.md  USER_GUIDE.md  offline-mode.md
apps/tui-node/docs/protocol/: 01_webrtc_signaling.md
apps/tui-node/examples/: hybrid_mode_e2e_test.rs  offline_dkg_signing_demo.rs  offline_frost_dkg_signing.rs  test_join_session_navigation.rs  test_keyboard_events.rs  test_session_loading_simple.rs  webrtc_mesh_e2e_test.rs
apps/tui-node/src/: blockchain_config.rs  blockchain_config_test.rs  lib.rs
apps/tui-node/src/elm/: app.rs  command.rs  error_help.rs  headless.rs  message.rs  mod.rs  model.rs  update.rs  ws_runtime.rs
apps/tui-node/src/elm/components/: create_wallet.rs  dkg_progress.rs  main_menu.rs  mod.rs  mode_selection.rs  password_prompt.rs  sign_transaction.rs  signature_complete.rs  wallet_complete.rs
apps/tui-node/src/hybrid/: coordinator.rs  transport.rs
apps/tui-node/src/keystore/: encryption.rs  extension_compat.rs  frost_keystore.rs  models.rs  storage.rs
apps/tui-node/src/protocal/: dkg.rs  mod.rs  reshare.rs  signal.rs  signing.rs
apps/tui-node/src/utils/: appstate_compat.rs  device.rs  eth_helper.rs  mod.rs  negotiation.rs  performance.rs  solana_encoder.rs
apps/tui-node/src/webrtc/: connection_monitor.rs  mesh_simulator.rs
apps/tui-node/tests/: component_rendering.rs  update_transitions.rs
apps/tui/docs/: COMPLETE_OFFLINE_WORKFLOW.md  COMPLETE_TUI_DOCUMENTATION.md  DEPLOYMENT_GUIDE.md  E2E_TEST_DESIGN.md  HYBRID_MODE_TEST_DESIGN.md  KEYBOARD_HANDLING_GUIDE.md  KEYBOARD_NAVIGATION_GUIDE.md  KEYSTORE_E2E_TEST_PLAN.md  MPC_WALLET_TUI_ARCHITECTURE.md  OFFLINE_DKG_GUIDE.md  README.md  WEBRTC_MESH_IMPLEMENTATION.md  WEBRTC_MESH_TEST_DESIGN.md  index.md
apps/tui/docs/architecture/: ARCHITECTURE.md  DKG_FLOWS.md  ELM_ARCHITECTURE.md  SECURITY.md  keystore_design.md
apps/tui/docs/archive/dev-journal/: COMPLETE_REFACTORING_SUMMARY.md  ERROR_HANDLING_GUIDE.md  EVENT_SYSTEM_COMPLETE.md  EVENT_SYSTEM_FIX.md  FIX_SUMMARY.md  FIX_THRESHOLD_SCREEN_STUCK.md  FIX_TODOLIST.md  FROST_DKG_IMPLEMENTATION_COMPLETE.md  HYBRID_MODE_COMPLETE.md  KEYBOARD_EVENT_ARCHITECTURE_ANALYSIS.md  KEYSTORE_E2E_COMPLETE.md  KEYSTORE_INITIALIZATION.md  MONTH2_DOCUMENTATION_SUMMARY.md  OFFLINE_DKG_IMPLEMENTATION.md  PERFORMANCE_FIXES.md  README.md  (+10 more)
apps/tui/docs/guides/: README.md  USER_GUIDE.md  offline-mode.md
apps/tui/docs/protocol/: 01_webrtc_signaling.md
apps/tui/examples/: hybrid_mode_e2e_test.rs  offline_dkg_demo.rs  offline_dkg_signing_demo.rs  webrtc_mesh_e2e_test.rs
apps/tui/scripts/: build-signal-server.sh  build-starlab-tui.sh  health-check.sh  launch-3node-cluster.sh  monitor-cluster.sh  run-signal-server.sh
apps/tui/src/: blockchain_config.rs  lib.rs
apps/tui/src/core/: connection_manager.rs  dkg_manager.rs  mod.rs  offline_manager.rs  session_manager.rs  signing_backend.rs  signing_manager.rs  wallet_manager.rs
apps/tui/src/elm/: app.rs  command.rs  message.rs  model.rs  provider.rs  update.rs  webrtc_signaling.rs  ws_runtime.rs
apps/tui/src/hybrid/: mod.rs
apps/tui/src/keystore/: encryption.rs  extension_compat.rs  frost_keystore.rs  mod.rs  models.rs  storage.rs
apps/tui/src/network/: webrtc.rs
apps/tui/src/offline/: export.rs  import.rs  mod.rs  session.rs  types.rs
apps/tui/src/protocal/: dkg.rs  dkg_coordinator.rs  mod.rs  reshare.rs  session_types.rs  signal.rs  signing.rs  unified_dkg.rs
apps/tui/src/utils/: appstate_compat.rs  curve_traits.rs  device.rs  erc20_encoder.rs  eth_helper.rs  mod.rs  negotiation.rs  solana_encoder.rs  state.rs
apps/tui/src/webrtc/: mesh_manager.rs  mesh_simulator.rs  mod.rs  rejoin_coordinator.rs
apps/tui/tests/: component_rendering.rs  update_transitions.rs
(+181 files in other folders)
