[workspace]
members = [
    "apps/tui",
    "apps/cli",
    "apps/signal-server/server",
    "apps/signal-server/cloudflare-worker",
    "packages/@starlab/core",
    "packages/@starlab/core-wasm",
    "packages/@starlab/blockchain",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Stars Labs"]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/stars-labs/starlab-mpc"
homepage = "https://github.com/stars-labs/starlab-mpc"

[workspace.dependencies]
# Common dependencies shared across workspace members
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
base64 = "0.22.1"
# getrandom 0.4 renamed the "js" feature to "wasm_js" (activates the
# js-sys/wasm-bindgen backend so wasm32-unknown-unknown builds can
# call `crypto.getRandomValues`). Without this, wasm-pack builds
# error with "the wasm*-unknown-unknown targets are not supported by
# default". Workspace members inherit via `getrandom.workspace = true`.
getrandom = { version = "0.4", features = ["wasm_js"] }

# FROST dependencies. Members currently pin these directly rather than
# inheriting from the workspace — keeping the versions here in sync so
# that any future `frost-core.workspace = true` doesn't silently pull
# a different version than the rest of the tree.
frost-core = { version = "2.2.0", features = ["serde"] }
frost-secp256k1 = { version = "2.2.0", features = ["serde"] }
frost-secp256k1-tr = { version = "2.2.0", features = ["serde"] }
frost-ed25519 = { version = "2.2.0", features = ["serde"] }

# Async runtime
tokio = { version = "1.42.0", features = ["full"] }

# WebRTC dependencies
webrtc = "0.17.1"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"
