[package]
name = "mpc-wallet-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "mpc-wallet-cli"
path = "src/main.rs"

[dependencies]
tui-node = { path = "../tui-node" }
webrtc-signal-server = { path = "../signal-server/server" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = "1.0"
hex = "0.4"
clap = { version = "4.5.21", features = ["derive"] }
anyhow = "1.0.99"
tracing = "0.1"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tempfile = "3.14.0"

[dev-dependencies]
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
