[package]
name = "mpc-wallet-native"
version = "0.1.0"
edition = "2024"
description = "Native MPC Wallet Node with Slint UI"
license = "Apache-2.0"

[dependencies]
# Slint UI. femtovg renderer for better font rendering; winit backend
# for X11, Wayland, and native on macOS/Windows.
slint = { version = "1.9.1", features = ["backend-winit", "backend-winit-x11", "backend-winit-wayland", "renderer-winit-femtovg"] }

# tui-node::core::* is the business-logic backend — WalletManager,
# SessionManager, DkgManager, OfflineManager, ConnectionManager,
# SigningManager, CoreState. Reused verbatim.
tui-node = { path = "../tui-node" }
hex = "0.4"

# Async runtime for the Slint event-loop bridge + tokio::task::spawn_blocking
# for rfd dialogs.
tokio = { version = "1.42.0", features = ["full"] }

# For serde_json::json! macro usage in UI-event payloads.
serde_json = "1.0.143"

# Error handling in CoreAdapter wrappers.
anyhow = "1.0.99"

# Logging.
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

# Native file-open / save dialogs for keystore import/export and SD-card
# folder picker. Backend: GTK on Linux, NSSavePanel / NSOpenPanel on
# macOS, IFileDialog COM on Windows.
rfd = "0.15"

# Required by tui-node::core::UICallback trait (`#[async_trait]` on the
# NativeUICallback impl) and for timestamp formatting in log-event
# payloads pushed to the Slint UI.
async-trait = "0.1.83"
chrono = { version = "0.4.39", features = ["serde"] }

[[bin]]
name = "mpc-wallet-native"
path = "src/main.rs"

[build-dependencies]
slint-build = "1.9.1"
