[package]
name = "frost-mpc-native"
version = "0.1.0"
edition = "2024"
description = "Native MPC Wallet Node with Iced UI (MIT-licensed GUI stack)"
license = "Apache-2.0"

[dependencies]
# Iced UI (Elm architecture, MIT-licensed). Replaces the Slint stack —
# Slint's licensing is unsuitable for a proprietary product, Iced is MIT.
# The default backend (wgpu) + tiny-skia fallback covers X11, Wayland,
# macOS and Windows. `tokio` feature wires Iced's executor to the same
# Tokio runtime the core managers run on.
iced = { version = "0.14", features = ["tokio"] }

# tui-node::core::* is the business-logic backend — WalletManager,
# SessionManager, DkgManager, OfflineManager, ConnectionManager,
# SigningManager, CoreState. Reused verbatim.
tui-node = { path = "../tui-node" }
hex = "0.4"

# Async runtime for the core managers + the mpsc UICallback bridge +
# tokio::task::spawn_blocking for rfd dialogs.
tokio = { version = "1.42.0", features = ["full"] }

# For serde_json::json! macro usage in UI-event payloads.
serde_json = "1.0.143"

# Error handling in CoreAdapter wrappers.
anyhow = "1.0.99"

# Logging.
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

# Native file-open / save dialogs for keystore import/export and SD-card
# folder picker.
rfd = "0.15"

# Required by tui-node::core::UICallback trait (`#[async_trait]` on the
# NativeUICallback impl) and for timestamp formatting in log-event
# payloads pushed to the UI.
async-trait = "0.1.83"
chrono = { version = "0.4.39", features = ["serde"] }

[[bin]]
name = "frost-mpc-native"
path = "src/main.rs"
