[package]
name = "tui-node"
version = "0.1.0"
edition = "2024"

[lib]
name = "tui_node"
path = "src/lib.rs"

[dependencies]
# Use our shared frost-core library
mpc-wallet-frost-core = { path = "../../packages/@mpc-wallet/frost-core" }
# Use our blockchain package
mpc-wallet-blockchain = { path = "../../packages/@mpc-wallet/blockchain" }

# Still need these for specific types
frost-ed25519 = { version = "2.2.0", features = ["serde", "serialization"] }
frost-secp256k1 = { version = "2.2.0", features = ["serde", "serialization"] }
frost-core = { version = "2.2.0", features = ["serde"] }
rand = "0.10.1"
# getrandom is the direct system-CSPRNG shim (calls `getrandom(2)` / `BCryptGenRandom`
# / equivalent on each OS). We use it directly for one-shot random fills
# (salts, nonces) so the code is immune to churn in the higher-level `rand` API.
getrandom.workspace = true
solana-sdk = "4.0.1"
solana-client = "3.0.1"
solana-system-program = "3.0.1"
# (bincode dropped: no source file references it, and upstream bincode
# 3.0 intentionally fails to compile pending a Rust feature flag. If a
# solana crate needs serde serialization again, add back explicitly with
# a 2.0.x constraint at that point.)
hex = { version = "0.4.3", features = ["serde"] }
# (no direct `rand_core` dep here — any FROST callsite needing one uses
# `frost_core::rand_core::OsRng` which is rand_core 0.6 and matches the
# FROST trait bounds. Mixing rand_core 0.10 would be invisible but pointless.)
curve25519-dalek = "4.1.3"
tokio = { version = "1.42.0", features = ["full"] }
tokio-tungstenite = { version = "0.29.0", features = ["native-tls"] }
futures-util = "0.3.31"
serde_json = "1.0.143"
serde = { version = "1.0.217", features = ["derive"] }
ratatui = { version = "0.30.0", features = ["crossterm"] }
crossterm = { version = "0.29.0" }
tuirealm = "4.0.0"
tui-realm-stdlib = "4.0.0"
anyhow = "1.0.99"
webrtc = "0.17.1"
bs58 = "0.5.1"
# System clipboard for the "Copy Session ID" button on the DKG Progress screen.
arboard = "3.6.1"
# sha2/sha3 pinned to 0.10 because `pbkdf2 = "0.12"` (latest at time of
# writing) transitively pulls `digest 0.10` and requires sha2 types that
# impl `digest 0.10`'s `CoreProxy`. sha2 0.11 uses `digest 0.11` and is
# incompatible with pbkdf2 0.12. Lift this pin when pbkdf2 publishes a
# version built on digest 0.11. Ecosystem-forced, not a voluntary downgrade.
sha2 = "0.10.8"
sha3 = "0.10.8"
ethers-core = "2.0.14"
ethers-providers = "2.0.14"
ethers-signers = "2.0.14"
k256 = "0.13.4"
elliptic-curve = "0.13.8"
rlp = "0.6.1"
clap = { version = "4.5.21", features = ["derive"] }
chrono = { version = "0.4.39", features = ["serde"] }
webrtc-signal-server = { path = "../signal-server/server" }
thiserror = "2.0.9"
uuid = { version = "1.11.0", features = ["v4", "serde"] }

# Cryptography used by the keystore layer (encryption.rs, frost_keystore.rs).
aes-gcm = "0.10.3"
argon2 = "0.5.3"
dirs = "6.0.0"
base64 = "0.22.1"
pbkdf2 = "0.12.2"
async-trait = "0.1.83"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
gethostname = "1.1.0"


[dev-dependencies]
tempfile = "3.14.0"

[[bin]]
name = "mpc-wallet-tui"
path = "src/bin/mpc-wallet-tui.rs"
