[package]
name = "starlab-client"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Starlab MPC client engine + terminal UI — FROST DKG, signing, and resharing across EVM, Bitcoin, Solana, and Sui."
keywords = ["frost", "mpc", "threshold", "wallet", "tui"]
categories = ["cryptography", "command-line-utilities"]

[lib]
name = "starlab_client"
path = "src/lib.rs"

[dependencies]
# Shared FROST library (DKG state machine, keystore encryption, curve helpers).
starlab-core = { path = "../../packages/@starlab/core", version = "0.1.0" }

# FROST 2.2 — secp256k1 for Ethereum, ed25519 for Solana, `frost-core`
# for ciphersuite-generic bounds.
frost-ed25519 = { version = "2.2.0", features = ["serde", "serialization"] }
frost-secp256k1 = { version = "2.2.0", features = ["serde", "serialization"] }
frost-core = { version = "2.2.0", features = ["serde"] }

# Salt/nonce + one-shot random fills. getrandom is the direct system
# CSPRNG shim (calls `getrandom(2)` / `BCryptGenRandom` / equivalent
# on each OS). `rand` is used by protocal/dkg.rs for FROST's own RNG
# trait bound.
rand = "0.10.1"
getrandom.workspace = true

# Solana SDK. Used by utils/solana_encoder.rs for SOL/SPL
# transaction construction. (No `solana-client` — the TUI doesn't
# RPC directly; it hands serialized txs to the user/extension. No
# `solana-system-program` either — the System Program pubkey is a
# well-known constant that we parse from its base58 string in
# solana_encoder::SYSTEM_PROGRAM_PUBKEY.)
solana-sdk = "4.0.1"

hex = { version = "0.4.3", features = ["serde"] }
tokio = { version = "1.42.0", features = ["full"] }
# rustls (not native-tls) so the build needs no system OpenSSL/pkg-config —
# portable to any machine. `webpki-roots` bundles Mozilla's CA set, so `wss://`
# works without a system cert store either. Feature-unified across the
# workspace, so cli / signal-server pick up rustls too.
tokio-tungstenite = { version = "0.29.0", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3.31"
serde_json = "1.0.143"
serde = { version = "1.0.217", features = ["derive"] }
ratatui = { version = "0.30.0", features = ["crossterm"] }
crossterm = { version = "0.29.0" }
tuirealm = "4.0.0"
anyhow = "1.0.99"
webrtc = "0.17.1"
# System clipboard for the "Copy Session ID" button on the DKG Progress screen.
arboard = "3.6.1"
# sha2/sha3 pinned to 0.10 because `pbkdf2 = "0.12"` (latest at time of
# writing) transitively pulls `digest 0.10` and requires sha2 types that
# impl `digest 0.10`'s `CoreProxy`. sha2 0.11 uses `digest 0.11` and is
# incompatible with pbkdf2 0.12. Lift this pin when pbkdf2 publishes a
# version built on digest 0.11. Ecosystem-forced, not a voluntary downgrade.
sha2 = "0.10.8"
sha3 = "0.10.8"

# Ethereum types (Address, U256, keccak256) for the ERC-20 encoder +
# EIP-191 hash. ethers-providers/signers aren't used — the TUI signs
# via FROST, doesn't talk to a node.
ethers-core = "2.0.14"
k256 = "0.13.4"
elliptic-curve = "0.13.8"
rlp = "0.6.1"

clap = { version = "4.5.21", features = ["derive"] }
chrono = { version = "0.4.39", features = ["serde"] }
starlab-signal-server = { path = "../signal-server/server", version = "0.1.1" }
thiserror = "2.0.9"
uuid = { version = "1.11.0", features = ["v4", "serde"] }

# Keystore encryption (encryption.rs, frost_keystore.rs).
aes-gcm = "0.10.3"
argon2 = "0.5.3"
base64 = "0.22.1"
pbkdf2 = "0.12.2"
async-trait = "0.1.83"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
gethostname = "1.1.0"


[dev-dependencies]
tempfile = "3.14.0"

[[bin]]
name = "starlab-tui"
path = "src/bin/starlab-tui.rs"
