[package]
name = "webrtc-signal-server-cloudflare-worker"
version = "0.1.0"
edition = "2024"
authors = ["xiongchenyu <xiongchenyu6@gmail.com>"]
description = "General WebRTC signal server For Device to Device Communication"
repository = "https://github.com/hecoinfo/mpc-wallet"
license = "MIT OR Apache-2.0"

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
worker = { version = "0.8" }
futures = "0.3.31"
serde_json = "1.0.143"
serde = { version = "1.0.217", features = ["derive"] }
