[package]
name = "starlab-signal-server"
version = "0.1.1"
edition = "2024"
authors = ["xiongchenyu <xiongchenyu6@gmail.com>"]
description = "General WebRTC signal server For Device to Device Communication"
repository = "https://github.com/hecoinfo/starlab-mpc"
license = "MIT OR Apache-2.0"
keywords = ["webrtc", "signal", "server", "device-to-device", "communication"]
categories = [
    "asynchronous",
    "web-programming::websocket",
    "network-programming",
]

[dependencies]
serde_json = "1.0.143"
serde = { version = "1.0.217", features = ["derive"] }
tokio = { version = "1.42.0", features = ["full"] }
tokio-tungstenite = "0.29.0"
futures-util = "0.3.31"

[lib]
name = "webrtc_signal_server"
path = "src/lib.rs"

[[bin]]
name = "starlab-signal-server"
path = "src/main.rs"
