[package]
name = "starlab-signal-server"
version = "0.1.1"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "WebRTC signaling server for the Starlab MPC mesh — session discovery and device-to-device relay."
keywords = ["webrtc", "signal", "server", "device-to-device", "communication"]
categories = [
    "asynchronous",
    "web-programming::websocket",
    "network-programming",
]

[dependencies]
serde_json = "1.0.143"
serde = { version = "1.0.217", features = ["derive"] }
tokio = { version = "1.42.0", features = ["full"] }
tokio-tungstenite = "0.29.0"
futures-util = "0.3.31"

[lib]
name = "starlab_signal_server"
path = "src/lib.rs"

[[bin]]
name = "starlab-signal-server"
path = "src/main.rs"
